changes of layout to white

--- a/page/components/Header/drawerHumburger/drawerHumburger.module.scss
+++ b/page/components/Header/drawerHumburger/drawerHumburger.module.scss
@@ -10,6 +10,10 @@
     cursor: pointer;
     float: left;
     margin: 5px 10px;
+
+    position: fixed;
+    z-index: 10;
+    top:0;
 }
 
 .drawerHumb div {
