--- a/page/components/Menu/CloseButton/CloseButton.module.scss
+++ b/page/components/Menu/CloseButton/CloseButton.module.scss
@@ -4,10 +4,12 @@
     align-self: end;
     cursor: pointer;
 
+    
+
     div {
       width: 43px;
       height: 5px;
-      background-color: #fff;
+      background-color: #000;
     }
 
     .leftIks {
