--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -2,18 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #000;
+  background-color: #fff;
   transition: all 800ms;
   position: relative;
   width: 100vw;
   height: 100vh;
   align-items: center;
-  // overflow-x: hidden;
-
-  // &.moved {
-  //   justify-content: start;
-  // }
-
 
 
   img {
@@ -30,7 +24,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #000;
+    background-color: #fff;
     min-width: 100vw;
     left: 0%;
     position: absolute;
