--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -1,15 +1,15 @@
 .navDrawer {
   width: 100vw;
   height: 100vh;
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 30px 20px 30px;
   font-size: 2rem;
-  position: absolute;
+  position: fixed;
 
   transition: transform 300ms;
   z-index: 15;
@@ -18,10 +18,22 @@
     font-size: 1.2rem;
   }
 
+  a {
+    padding: 30px 20px 30px;
+  }
+
   
 
   @media screen and (min-width: 700px) {
     width: 40vw;
+    align-items: flex-start;
+
+    h5 {
+      text-align: center;
+      width: 100%;
+
+    }
+
   }
 }
 
