--- a/page/src/styles/Home.module.scss
+++ b/page/src/styles/Home.module.scss
@@ -28,27 +28,29 @@
   
 
   span{
-    font-size: 2rem;
+    font-size: 1rem;
     position: absolute;
-    transition: all 300ms;
+    transition: width 700ms ease-out;
     top:12px;
     z-index: 5;
     color: #000;
+    right: 0px;
+    text-align: center;
     
   }
 
   .positionNormal{
-    // left: 75px;
     width: 100%;
-    text-align: center;
+    
   }
 
   .positionOpen{
-    left: 45%;
+    width: 35%;
   }
 
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 700px) {
     margin-top: 80px;
+    font-size: 2rem;
 
   }
 }
