--- a/page/components/Menu/CloseButton/CloseButton.module.scss
+++ b/page/components/Menu/CloseButton/CloseButton.module.scss
@@ -1,28 +1,9 @@
-.virtualBox {
-    width: 35px;
-    height: 40px;
-    align-self: end;
-    cursor: pointer;
 
-    
-
-    div {
-      width: 43px;
-      height: 5px;
-      background-color: #000;
-    }
-
-    .leftIks {
-      transform: rotateZ(45deg) translateX(9px) translateY(16px);
-    }
-    .rightIks {
-      transform: rotateZ(-45deg) translateX(-13px) translateY(5px);;
-    }
-  }
 
   section.model {
     height: 50px;
-    top: 0px;
+    top: 15px;
+    left: 15px;
     float: left;
     width: 50px;
     position: fixed;
@@ -33,11 +14,12 @@
       width: 50px;
       position: relative;
       margin: auto;
-      padding-top: 7.5px;
-      border: 2.5px solid transparent;
+      padding-top: 4.75px;
+      border: 1px solid #000;
       border-radius: 50%;
       transition: 0.3s;
       cursor: pointer;
+      background-color: #ffffff99;
     }
     
     .bar {
@@ -70,20 +52,20 @@
       border-radius: 50%;
     }
 
-    & .menu:hover:after {
+    & .menu.close:after {
       animation: circle-creation 1s forwards;
     }
 
-    & .menu:hover .bar:nth-of-type(1) {
-      transform: translateY(6px) rotate(45deg);
+    & .menu.close .bar:nth-of-type(1) {
+      transform: translateY(6.5px) rotate(45deg);
     }
 
-    & .menu:hover .bar:nth-of-type(2) {
+    & .menu.close .bar:nth-of-type(2) {
       transform: translateX(50px);
       transition: 0.6s;
     }
 
-    & .menu:hover .bar:nth-of-type(3) {
+    & .menu.close .bar:nth-of-type(3) {
       transform: translateY(-13.5px) rotate(-45deg);
     }
 
