--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -4,11 +4,16 @@
   justify-content: center;
   background-color: #fff;
   transition: all 800ms;
+  transition: filter 250ms;
   position: relative;
   width: 100vw;
   height: 100vh;
   align-items: center;
 
+  &.blur{
+    filter: blur(8px);
+    transition: filter 250ms;
+  }
 
   img {
     max-width: 100%;
