--- a/page/components/Menu/CloseButton/CloseButton.module.scss
+++ b/page/components/Menu/CloseButton/CloseButton.module.scss
@@ -15,21 +15,25 @@
       position: relative;
       margin: auto;
       padding-top: 4.75px;
-      border: 1px solid #000;
+      border: 2.5px solid #000;
       border-radius: 50%;
       transition: 0.3s;
       cursor: pointer;
       background-color: #ffffff99;
+
+      &.close{
+        border: 2.5px solid transparent;
+      }
     }
     
     .bar {
-      height: 2.5px;
+      height: 3px;
       width: 35px;
       display: block;
-      margin: 7.5px auto;
+      margin: 7px auto;
       position: relative;
       background-color: #000;
-      border-radius: 2.5px;
+      border-radius: 40%;
       transition: 0.4s;
     }
 
@@ -57,7 +61,7 @@
     }
 
     & .menu.close .bar:nth-of-type(1) {
-      transform: translateY(6.5px) rotate(45deg);
+      transform: translateY(9px) rotate(45deg);
     }
 
     & .menu.close .bar:nth-of-type(2) {
@@ -66,7 +70,7 @@
     }
 
     & .menu.close .bar:nth-of-type(3) {
-      transform: translateY(-13.5px) rotate(-45deg);
+      transform: translateY(-11px) rotate(-45deg);
     }
 
     @keyframes circle-creation {
