--- a/page/src/styles/Home.module.scss
+++ b/page/src/styles/Home.module.scss
@@ -2,6 +2,8 @@
   padding: 0;
   overflow-x: hidden;
   background-color: #fff;
+  
+  
 }
 
 .main {
@@ -15,42 +17,42 @@
 }
 
 .siteHeader {
-
-  margin-top: 70px;
-  
+  margin-top: 70px;  
   width: auto;
   height: 100vh;
-   background-image: url('../../public/assets/autoportret-z-maskamibig.png');
+  background-image: url('../../public/assets/autoportret-z-maskamibig.png');
   background-repeat: no-repeat;
   background-position: 50% 15%;
-  background-size:contain;
-  // background-image: url('/image.svg');
-  
+  background-size:contain;  
 
-  span{
-    font-size: 1rem;
-    position: absolute;
-    transition: width 700ms ease-out;
-    top:12px;
-    z-index: 5;
-    color: #000;
-    right: 0px;
-    text-align: center;
-    
-  }
-
-  .positionNormal{
-    width: 100%;
-    
-  }
-
-  .positionOpen{
-    width: 35%;
+  &.blur{
+    filter: blur(8px);
+    transition: filter 250ms;
   }
 
   @media screen and (min-width: 700px) {
     margin-top: 80px;
     font-size: 2rem;
 
+  }
+}
+
+span.anitaText{
+  font-size: 1rem;
+  position: absolute;
+  transition: width 500ms ease-out;
+  top:12px;
+  z-index: 5;
+  color: #000;
+  right: 0px;
+  text-align: center;    
+
+  &.positionNormal{
+    width: 100%;
+    
+  }
+
+  &.positionOpen{
+    width: 35%;
   }
 }
