--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -58,7 +58,7 @@
 
   @media screen and (min-width: 700px) {
     width: 40vw;
-    justify-content: flex-start;
+    justify-content: space-between;
 
     h1.amenu{
       font-size: 1rem;
