--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -15,13 +15,13 @@
     transition: filter 250ms;
   }
 
-  img {
-    max-width: 100%;
-    margin: 100px 0;
-    max-height: 50vh;
-    cursor: pointer;
-    margin: 0;
-  }
+  // .imgArt {
+  //   max-width: 100%;
+  //   margin: 100px 0;
+  //   max-height: 50vh;
+  //   cursor: pointer;
+  //   margin: 0;
+  // }
 
   div.firstLook {
     width: 50%;
