--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -9,39 +9,44 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
 
     @media screen and (min-width: 500px) {
         max-height: 80vh;
     }
-}
 
-.imgArt {
-    max-width: 100%;
-    max-height: 50vh;
-    cursor: pointer;
-    filter: blur(8px);
-    visibility: hidden;
-    transition: all 2s;
-    height: 0%;
-    width: 0%;
+    .imgArt {
+        max-width: 100%;
+        max-height: 50vh;
+        cursor: pointer;
+        filter: blur(8px);
+        visibility: hidden;
+        transition: all 2s;
+        height: 0%;
+        width: 0%;
 
-    @media screen and (min-width: 500px) {
-        max-height: 80vh;
+        @media screen and (min-width: 500px) {
+            max-height: 80vh;
+        }
     }
 }
+
+
 
 
 .loaded {
-  
+    z-index: 7;
     animation-name: artOn;
-    animation-duration: 2s;
+    animation-delay: 300ms;
+    animation-duration: 400ms;
     animation-fill-mode: forwards;
 }
 
 @keyframes artOn {
     from {
-        width: auto;
-        height: 0%;
+        width: 0px;
+        height: 0px;
+        visibility: hidden;
         filter: blur(7px)
     }
 
@@ -54,42 +59,20 @@
 }
 
 
-.offPlaceholder {
-    animation: placeOff 1000ms linear 1 forwards !important;
-}
 
-@keyframes placeOff {
-    from {
-        width: 100;
-        height: 100%;
-        filter: blur(0px);
-    }
-
-
-    to {
-        display: none !important;
-        width: 0%;
-        height: 0%;
-        filter: blur(7px);
-        visibility: hidden;
-    }
-}
 
 .placeHolderImg {
+    z-index: 5;
     max-height: 80vh;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
+    height: 80%;
+    width: 50%;
+    position: absolute;
     margin: 2%;
     background: linear-gradient(307deg, #ffffff, #000000, #ffffff);
     background-size: 500vh 500vh;
     animation: place-holder-imgs 3500ms linear infinite;
     filter: blur(7px);
-
-
+    top: 0px;
 }
 
 
@@ -105,5 +88,39 @@
 
     100% {
         background-position: 0% 99%
+    }
+}
+
+.offPlaceholder {
+
+    animation: placeOff 400ms linear 1 forwards !important;
+}
+
+@keyframes placeOff {
+    from {
+        background-position: 0% 99%;
+        filter: blur(7px);
+        top:0%;
+        height: 80%;
+        width: 50%;
+        
+    }
+
+    50%{
+        filter: blur(3px);
+        background-position: 100% 2%;
+        top:20%;
+        height: 40%;
+        width: 25%;
+
+    }
+
+
+    to {
+        background-position: 100% 2%;
+        filter: blur(0px);
+        top:50%;
+        height: 0%;
+        width: 0%;
     }
 }
