--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -10,6 +10,7 @@
     align-items: center;
     flex-direction: column;
     position: relative;
+    visibility: visible;
 
     @media screen and (min-width: 500px) {
         max-height: 80vh;
@@ -17,13 +18,10 @@
 
     .imgArt {
         max-width: 100%;
-        max-height: 50vh;
+        max-height: 75vh;
         cursor: pointer;
-        filter: blur(8px);
-        visibility: hidden;
         transition: all 2s;
-        height: 0%;
-        width: 0%;
+        
 
         @media screen and (min-width: 500px) {
             max-height: 80vh;
@@ -54,7 +52,7 @@
         width: auto;
         height: 100%;
         filter: blur(0px);
-        visibility: inherit;
+        visibility: visible;
     }
 }
 
