--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -31,7 +31,7 @@
   }
 
 
-  @media screen and (min-width: 350px) {
+  @media screen and (min-width: 375px) and (orientation: portrait){
     
     h1.amenu{
       font-size: 1.5rem;
@@ -39,6 +39,19 @@
 
     a{
       font-size: 2rem;
+    }
+    
+
+  }
+
+  @media screen and (min-width: 375px) and (orientation: landscape){
+    
+    h1.amenu{
+      font-size: 1rem;
+    }
+
+    a{
+      font-size: 1.25rem;
     }
     
 
