--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -3,19 +3,16 @@
   flex-direction: row;
   justify-content: center;
   background-color: #fff;
-  transition: all 800ms;
+  transition: all 300ms;
   transition: filter 250ms;
   position: relative;
   width: 100vw;
   height: 150vh;
-  align-items: center;
-
-  
-  
+  align-items: center; 
 
  
   @mixin look {
-    transition: all 800ms;
+    transition: all 300ms;
     position: absolute;
     top:0%;
     display: flex;
@@ -32,7 +29,7 @@
     left: 0%;
 
     &.firstOpen {
-      left: -100%;
+      left: -1000%;
     }
   }
 
@@ -40,7 +37,7 @@
     @include look;
     width: 100%;
     min-height: 100%;
-    left: 110%;    
+    left: 1100%;    
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -67,9 +64,7 @@
 
       &.blured{
         filter: blur(7px);
-      }
-
-      
+      }      
     }
 
     &.secondOpen {
@@ -83,5 +78,15 @@
       flex-direction: row;
       align-items: center;
     }
+  }
+
+  @media screen and (min-width: 750px) {    
+    
+    height: 130vh;
+  }
+
+  @media screen and (min-width: 1000px) {    
+    
+    height: 100vh;
   }
 }
