--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -1,7 +1,7 @@
 .ArtBox {
     max-width: 100%;
-    margin: 100px 0;
-    max-height: 50vh;
+    // margin: 100px 0;
+    max-height: 55vh;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -15,15 +15,13 @@
         max-height: 80vh;
     }
 
-    .imgArt {
-       
+    .imgArt {       
         cursor: pointer;
         transition: all 2s;
         width: auto;
         height: auto;
-        max-width: 90%;
-        max-height: 90%;
-        
+        max-width: 95%;
+        max-height: 95%;        
 
         @media screen and (min-width: 500px) {
             max-height: 80vh;
@@ -112,8 +110,7 @@
         filter: blur(7px);
         top:0%;
         height: 80%;
-        width: 50%;
-        
+        width: 50%;        
     }
 
     50%{
@@ -122,7 +119,6 @@
         top:20%;
         height: 40%;
         width: 25%;
-
     }
 
 
