--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -127,7 +127,7 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         justify-content: space-around;
 
         
@@ -151,12 +151,7 @@
       }
   
     }
-
-    
-
-
-
-    
+   
 
   }
 
