--- a/page/components/Footer/Footer.module.scss
+++ b/page/components/Footer/Footer.module.scss
@@ -1,30 +1,28 @@
-
-
-.firstBox{
+.firstBox {
     background-color: #000;
-display: flex;
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: flex-end;
+    align-items: flex-end
+}
 
-width: 100%;
-height: 300px;
-justify-content: flex-end;
-align-items: flex-end}
-
-.secondBox{
+.secondBox {
     background-color: #000;
-     padding: 10px;
-     
-     display: inline;
-     
-     background-color:  #000;
-     font-weight: lighter;
-     font-size: 0.7rem;
-    
-     h3{
-         margin: 0;
-     }
+    padding: 10px;
 
-     a{
-         text-decoration: underline;
-     }
- 
+    display: inline;
+
+    background-color: #000;
+    font-weight: lighter;
+    font-size: 0.7rem;
+
+    h3 {
+        margin: 0;
+    }
+
+    a {
+        text-decoration: underline;
+    }
+
 }
