--- a/page/components/ContactForm/formspree.module.scss
+++ b/page/components/ContactForm/formspree.module.scss
@@ -1,5 +1,8 @@
 .Form {
 
+  color: #000;
+  text-align: left;
+
 
   display: flex;
   flex-direction: column;
@@ -11,6 +14,10 @@
 
   h1 {
     font-size: 3rem;
+  }
+
+  p{
+    
   }
 
   div {
@@ -37,10 +44,10 @@
   textarea,
   button {
     width: 90%;
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     outline: none;
-    border: 1px solid #fff;
+    border: 1px solid #000;
     padding: 5px;
     font-size: 1.5rem;
   }
@@ -75,4 +82,6 @@
 .Text {
   text-align: center;
   margin: 100px 0;
+  color: #000;
+  text-align: left;
 }
