--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -20,6 +20,8 @@
   .boxMenu {
     height: 90vh;
 
+    width: 100%;
+
     padding-top: 20px;
 
     display: flex;
@@ -33,16 +35,17 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
+      width: 100%;
 
       a {
         width: 100%;
-        text-align: center;
+        text-align: left;
         font-size: 1.5rem;
       }
     }
 
     .logoMenu {
-      height: 30%;
+      min-height: 30%;
       width: auto;
 
       .logotypAM {
@@ -89,6 +92,7 @@
   }
 
   @media screen and (min-width: 500px) {
+    border-right: 1px solid #000;
     width: 75vw;
     justify-content: space-between;
 
@@ -118,6 +122,7 @@
         flex-direction: column;
         align-items: left;
         justify-content: space-around;
+        margin-left: 3%;
 
         
           a {
