--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -11,6 +11,7 @@
   position: fixed;
   transition: transform 300ms;
   z-index: 15;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   h1.h1Menu {
     font-size: 1.25rem;
@@ -34,23 +35,28 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-around;
+      justify-content: start;
       width: 100%;
 
       a {
         width: 100%;
         text-align: left;
         font-size: 1.5rem;
+        height: 40px;
+        margin-bottom: 25px;
+
       }
     }
 
     .logoMenu {
-      min-height: 30%;
-      width: auto;
+      min-height: 50%;
+      width: 100%;
+      text-align: center;
 
       .logotypAM {
         background-color: #000;
-        margin: 0 auto;
+        height: 100%;
+        width: auto;
       }
     }
 
@@ -121,31 +127,37 @@
         display: flex;
         flex-direction: column;
         align-items: left;
-        justify-content: space-around;
+        justify-content: center;
         margin-left: 3%;
 
-        
-          a {
-            font-size: 1.75rem;
-          }
-        
+
+        a {
+          font-size: 1.75rem;
+          text-align: left;
+        font-size: 1.5rem;
+        height: 40px;
+        margin-bottom: 25px;
+        }
+
       }
 
       .logoMenu {
         height: 100%;
-        width: 34%;
+        width: 74%;
         display: flex;
         justify-content: left;
         align-items: center;
-  
+
         .logotypAM {
           background-color: #000;
           margin: 0 auto;
+          height: auto;
+          width: 100%;
         }
       }
-  
+
     }
-   
+
 
   }
 
