--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -35,7 +35,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       width: 100%;
 
       a {
