--- a/page/components/Footer/Footer.module.scss
+++ b/page/components/Footer/Footer.module.scss
@@ -10,10 +10,8 @@
 .secondBox {
     background-color: #000;
     padding: 10px;
-
     display: inline;
-
-    background-color: #000;
+    color: #eee;
     font-weight: lighter;
     font-size: 0.7rem;
 
@@ -21,7 +19,7 @@
         margin: 0;
     }
 
-    a {
+    a:hover {
         text-decoration: underline;
     }
 
