--- a/page/components/Menu/Menu.module.scss
+++ b/page/components/Menu/Menu.module.scss
@@ -11,7 +11,7 @@
   position: fixed;
   transition: transform 300ms;
   z-index: 15;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  // font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   h1.h1Menu {
     font-size: 1.25rem;
