new bio content and fine look Art view

--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -8,16 +8,16 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  
-  
+
+
 
   @mixin look {
     transition: all 300ms;
     position: absolute;
-    top:0%;
+    top: 0%;
     display: flex;
-    background-color: #fff; 
-  } 
+    background-color: #fff;
+  }
 
   div.firstLook {
     @include look;
@@ -37,31 +37,41 @@
     @include look;
     width: 100%;
     min-height: 100vh;
-    left: 200%;    
+    left: 200%;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-   
+
     .full {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      align-items: 30%;
-      width: 28%;
-      min-height: 25vh;
+      // align-items: 30%;
+      width: 100%;
+      height: 11vh;
       margin-right: 1%;
-      margin-left: 1%;       
+      margin-left: 1%;
 
-      p, h1{
+      h2 {
+        font-size: 0.75em;
+      }
+
+      p {
+        font-size: 0.5em;
+      }
+
+      p,
+      h2 {
         color: #000;
         background-color: #fff;
         margin-right: 1%;
-        margin-left: 1%;    
+        margin-left: 1%;
+        width: 100%;
       }
 
-      &.blured{
+      &.blured {
         filter: blur(7px);
-      }      
+      }
     }
 
     &.secondOpen {
@@ -69,28 +79,35 @@
     }
   }
 
-  @media screen and (min-width: 750px) {    
-    
+  @media screen and (min-width: 750px) {
+
     div.secondLook {
       flex-direction: row;
-      align-items: center;      
+      align-items: center;
 
-      .full{
+      
+
+      .full {
         height: 100%;
-        
-      width: 30%;
+        width: 30%;
+
+        h2 {
+          font-size: 1.25em;
+        }
+
+        p {
+          font-size: 1em;
+        }
       }
     }
 
   }
 
-  @media screen and (min-width: 750px) {    
-    
-  }
+  @media screen and (min-width: 750px) {}
 
-  @media screen and (min-width: 1000px) {    
+  @media screen and (min-width: 1000px) {
     height: 100vh;
 
-    
+
   }
 }
