--- a/page/components/ContactForm/formspree.module.scss
+++ b/page/components/ContactForm/formspree.module.scss
@@ -10,6 +10,12 @@
   margin: 25px 1%;
   padding-top: 80px;
 
+  @media screen and (min-width : 500px) {
+    padding-left: 80px;  
+  }
+  
+
+
 
   h1 {
     font-size: 3rem;
