add last changes and analytics

--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -40,6 +40,10 @@
             @media (orientation: landscape) {
                 height: 98%;
             }
+            @media (orientation: portrait) {
+                height: 98%;
+                
+            }  
         }
 
         &.landscape {     
