add menu clicko off

--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -41,7 +41,7 @@
                 height: 98%;
             }
             @media (orientation: portrait) {
-                height: 98%;
+                width: 98%;
                 
             }  
         }
