--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -38,17 +38,17 @@
 
             
             @media (orientation: landscape) {
-                height: 98%;
+                height: 98vh;
             }
         }
 
         &.landscape {     
             @media (orientation: landscape) {
-                height: 98%;
+                height: 98vh;
             }
 
             @media (orientation: portrait) {
-                width: 98%;
+                width: 98vw;
                 
             }                
         }
