--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -1,5 +1,3 @@
-
-
 .ArtBox {
     max-height: 100vh;
     width: 100vw;
@@ -9,7 +7,6 @@
     align-items: center;
     flex-direction: column;
     visibility: visible;
-
 
     @media screen and (min-width: 750px) {
         max-height: 100vh;
@@ -21,13 +18,11 @@
         @media screen and (min-width: 750px) {
             width: 70%;
         }
-    
     }
 
     .imgArt {
         cursor: pointer;
         transition: all 2s;
-
         max-width: 98%;
         max-height: 98%;
         width: auto;
@@ -42,9 +37,9 @@
         }
 
         &.landscape {     
-            @media (orientation: landscape) {
-                height: 98vh;
-            }
+            // @media (orientation: landscape) {
+            //     height: 98vh;
+            // }
 
             @media (orientation: portrait) {
                 width: 98vw;                
@@ -61,9 +56,7 @@
         animation-delay: 50ms;
         animation-duration: 400ms;
         animation-fill-mode: forwards;
-    }
-
-   
+    }   
 
     @keyframes artOn {
         from {
