add css changes with umgs

--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -23,8 +23,8 @@
     .imgArt {
         cursor: pointer;
         transition: all 2s;
-        max-width: 98%;
-        max-height: 98%;
+        max-width: 98vw;
+        max-height: 98vh;
         width: auto;
         height: auto;
 
