fixed fade art on big screen

--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -9,9 +9,9 @@
   width: 100vw;
   height: 100vh;
 
-  &:last-child{
-    margin-bottom: 200px;
-  }
+  // &:last-child{
+  //   margin-bottom: 200px;
+  // }
 
 
 
