--- a/page/components/LookArt/LookArt.module.scss
+++ b/page/components/LookArt/LookArt.module.scss
@@ -17,6 +17,11 @@
     background-color: #fff;
   }
 
+  .HelveticaText{
+    font-family: Helvetica;
+  }
+
+
   div.firstLook {
     @include look;
     width: 50%;
