--- a/page/components/ContactForm/formspree.module.scss
+++ b/page/components/ContactForm/formspree.module.scss
@@ -23,7 +23,10 @@
 
   h1 {
     margin-bottom: 15px;
+    font-size: 1.70em;
+    font-weight: bold;
   }
+
 
 
   div {
@@ -32,7 +35,6 @@
     justify-content: space-between;
     width: 100%;
     padding: 3% 0%;
-
     flex-wrap: wrap;
   }
 
@@ -44,15 +46,16 @@
     color: #000;
     outline: none;
     border: 1px solid #000;
-    padding: 5px;
-    font-size: 1.5rem;
+    padding: 1.37% 2.33%; 
+    font-size: 1.25rem;
     
   }
 
   button {
     cursor: pointer;
     width: 100%;
-    margin-top: 3%;
+    color: #fff;
+    background-color: #000;
   }
 
   textarea {
