--- a/page/components/ArtImage/ArtImage.module.scss
+++ b/page/components/ArtImage/ArtImage.module.scss
@@ -1,3 +1,5 @@
+
+
 .ArtBox {
     max-height: 100vh;
     width: 100vw;
@@ -27,7 +29,10 @@
         max-height: 98vh;
         width: auto;
         height: auto;
+        cursor: pointer;
 
+
+      
 
         &.portrait {
 
