all concept view

--- a/page/components/ContactForm/formspree.module.scss
+++ b/page/components/ContactForm/formspree.module.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   min-height: 100vh;
   align-items: flex-start;
-  width: 98vw;
-  margin: 25px 1%;
+  width: 94vw;
+  margin: 3% 3%;
   padding-top: 80px;
   padding-bottom: 80px;
 
